style.css
html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    min-height: 100vh;
}

.logo {
    width: 300px;
    max-width: 70vw;
    height: auto;
    display: block;
    margin: 10px auto 10px auto;
    transform: scale(1.5);
    transform-origin: center;   
}
body {
    display: flex;
    justify-content: center;   
    align-items: center;      
    min-height: 100vh;
    overflow: hidden;
}

.app {
    background: rgba(0, 0, 0, 0.6);
    padding: 20px 30px;
    border-radius: 16px;
    text-align: center;

    width: 100%;
    max-width: 420px;  
}


#mode{
    color : #fff;
    font-family: 'Press Start 2P', cursive;
    margin-bottom: 15px;
    font-size: 35px;
    margin: 0 0 30px 0;
}
#timer{
    color : #fff;
    font-family: 'Press Start 2P', cursive;
    margin-bottom: 15px;
    margin-top: 0px;
    font-size: 25px;
}
.buttons button {
    background-color: #d4a7e8;
    border: none;
    color: #fff;
    padding: 14px 20px;
    border-radius: 50px;font-family: 'Press Start 2P', cursive;

    transition: transform 0.2s, background-color 0.2s;
}
.buttons button:hover {
    transform: scale(1.05); 
    background-color: #f093d2; 
}
.music-player {
    position: fixed;
    top: 20px;
    right: 20px;

    display: flex;
    align-items: center;
    gap: 8px;

    background: rgba(0, 0, 0, 0.6);
    padding: 8px 10px;
    border-radius: 12px;

    z-index: 1000;
}


.music-player button {
    background: transparent;
    border: 1px solid rgba(255,255,255,0.6);
    color: #fff;

    font-size: 14px;        
    padding: 8px 10px;    

    border-radius: 10px;
    cursor: pointer;

    transition: background 0.15s ease, transform 0.1s ease;
}


.music-player button:hover {
    background: #fff;
    color: #000;
    transform: scale(1.1);
}
#song-name {
    font-size: 15px;
    max-width: 120px;

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    text-align: center;
}
#bg-video {
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -2;
}
#bg-video {
    transform: translateZ(0);
    will-change: transform;
}

.app {
    transform: translateZ(0);
    will-change: transform;
}

